# dungeon-quest

./: .gitignore  Cargo.toml  README.md  credits.txt  data.json  effects.json  english.json  highscores.json  list_floor.txt  list_room.txt  setting.json  temp.rs  upgrades.json  vietnamese.json
0x72/: crop.py  hero_crop.py  my_crop.py  tiles_list_v1.4
assets/floors/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
assets/rooms/: 00.txt  01.txt
licenses/: License.txt  info.TXT  readme.txt
resources/: README.md
resources/results/GUIs/: note.txt
resources/results/frames/: note.txt
resources/results/heros/: note.txt
resources/results/monsters/: note.txt
resources/scripts/: crop.py  gui_crop.py  hero_crop.py  monster_crop.py  wall_crop.py
resources/titles/: hero_list.txt  monster_list.txt  tiles_list.txt  wall_list.txt
src/: config.rs  example.rs  main.rs  state.rs  status.rs
src/components/: bullet.rs  invinsible_cooldown.rs  mod.rs  monster.rs  monster_animation.rs  monster_list_effects.rs  player.rs  player_animation.rs  player_list_effects.rs  potion.rs  skill.rs  weapon.rs  weapon_shoot_attack.rs  weapon_swing_attack.rs
src/ingame/: input.rs  mod.rs  plugin.rs  set_up_systems.rs
src/materials/: dungeon.rs  flag.rs  font.rs  heroes.rs  heros.rs  icon.rs  ingame.rs  menu_box.rs  mod.rs  monsters.rs  potions.rs  scenes.rs
src/plugins/: camera.rs  debug.rs  loading_screen.rs  mod.rs  music.rs  setting.rs
src/resources/: animation_state.rs  dictionary.rs  game_data.rs  game_mode.rs  glossary.rs  language.rs  mod.rs  profile.rs  scene.rs  scene_controller.rs  setting.rs  stored_profile.rs  tile_size.rs
src/scenes/: credits_scene.rs  game_mode_select_scene.rs  help_scene.rs  hero_select_scene.rs  highscore_scene.rs  loading_scene.rs  main_menu_scene.rs  mod.rs  options_scene.rs  pause_scene.rs  random_reward_scene.rs  result_scene.rs  reward_scene.rs  rewards_scene.rs  setting_scene.rs  test_scene.rs
(+235 files in other folders)
