[package]
name = "dungeon-quest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11"
]

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
bevy_kira_audio = { version = "0.9" }
bevy-inspector-egui = "0.10"
chrono = "0.4"
rand = "0.8.5"



[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
